--- a/www/index.html
+++ b/www/index.html
@@ -18,25 +18,57 @@
     under the License.
 -->
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    </body>
+	<head><link rel="stylesheet" href="CIT - Application CSS.css" type="text/css"> 
+		<title> Actualites </title>
+	</head>
+		
+	<body>
+	<div class="screen">
+		
+		<table class="table">
+		<tr>
+			<td class="date"> 20/11/2013 </td>
+			<td class="logo">Logo</td>
+			<td class="title">LFI Actualite</td>
+		</tr>
+		</table> 
+		
+		</br>
+				<div class="important"> Actualites importantes </div>
+				<div class="boite"><h1> Marche de Noel et Swimathon</h1>
+									<h2> 25/11/2013</h2>
+									Le marche de Noel du 50eme anniversaire du LFI aura lieu le samedi 7 decembre de 10h a...</br></div>
+				<div class="boite"><h1>Matinee Portes-Ouvertes a Hung Hom, 30 novembre </h1>
+									<h2>22/11/2013</h2>
+									Le Lycee Francais International de Hong Kong est heureux de vous annoncer la prochaine ouverture de son no...</br></div>
+				<div class="boite"><h1>Salon des Cursus</h1>
+									<h2> 21/11/2013</h2>
+									Eleves de seconde, premiere et terminale participez le samedi 7 decembre au Salon des Cur...</br></div>
+				<div class="boite"><h1>8eme coupe d'Asie de rugby : le LFI a gagne!</h1>
+									<h2>13/11/2013 </h2>
+									La 8eme coupe d'Asie de rugby à 7 des lycees francais se deroulait les 8 et 9 novembr...</br></div>
+				<div class="boite"><h1> Marche de Noel et Swimathon</h1>
+									<h2> 25/11/2013</h2>
+									Le marche de Noel du 50eme anniversaire du LFI aura lieu le samedi 7 decembre de 10h a...</br></div>
+				<div class="boite"><h1>Matinee Portes-Ouvertes a Hung Hom, 30 novembre </h1>
+									<h2>22/11/2013</h2>
+									Le Lycee Francais International de Hong Kong est heureux de vous annoncer la prochaine ouverture de son no...</br></div>
+				<div class="boite"><h1>Salon des Cursus</h1>
+									<h2> 21/11/2013</h2>
+									Eleves de seconde, premiere et terminale participez le samedi 7 decembre au Salon des Cur...</br></div>
+		
+		
+		<table class="table2">
+		<tr>
+			<td class="pronote"><a href="CIT-Application(pronote).html" target="_blank"> Pronote </a></td>
+			<td class="site"><a href="https://www.fis.edu.hk/" target="_blank"> Site de l'ecole </a></td>
+			<td class="francais"> Fr </td>
+			<td class="english"><a href="CIT-Application (english).html"> En </a></td>
+		</tr>
+		</table>
+		
+	</div>
+
+	</body>
+	
 </html>
